kubernetes/djangodeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  labels:
    app: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django
        image: madhusnvak/api:latest
        command: ['/bin/bash', 'run.sh'] # runs migrations and starts the server
        ports:
        - containerPort: 8000
