kubernetes/django-service.yml
kind: Service
apiVersion: v1
metadata:
  name: django-service
spec:
  selector:
    app: django
  ports:
  - port: 8000
    targetPort: 8000
