kubernetes/minikube-ingress.yml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: minikube-ingress
#   annotations:
# spec:
#   rules:
#   - host: hello.world
#     http:
#       paths:
#       - path: /
#         pathType: Prefix

#       - path: /api
#         pathType: Prefix
#         service:
#           name: django
#           port:
#             number: 8000



apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: hello-world.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 8000
